projects/DigitPop-Player/src/app/video/video.component.scss
/* ... */
.container {
  width: 100vw;
  height: 100vh;
  background-color: #202020;
}

.video-thumbnail {
  position: absolute;
  left: 50%;
  top: 50%;
  height: auto;
  width: auto;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  max-width: 100%;
  max-height: 100%;
}

.sound-status {
  opacity: 0.65;
  cursor: pointer;
  z-index: 99;
  position: absolute;
  top: 30px;
  right: 30px;
  width: 25px;
  height: 25px;
}

.canvas {
  z-index: 101;
}

.main-product-grid {
  z-index: 101;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: repeat(24, 1fr);
  column-gap: 10px;
  position: absolute;
  left: 0;
  top: 0;
}

[hidden] {
  display: none !important;
}

.button-resume-grid {
  grid-column: 2/3;
  grid-row: 1/2;
}

.products-container {
  display: flex;
  flex-flow: row wrap;
  row-gap: 10px;
}

.example-viewport {
  height: 200px;
  width: 200px;
  border: 1px solid black;
}

::ng-deep .simplebar-scrollbar::before {
  background-color: #cdcdcd !important;
}

.all-pg-thumbnail {
  position: relative;
  width: 200px;
  height: 200px;
  overflow: hidden;
}

.all-pg-thumbnail img {
  position: absolute;
  left: 50%;
  top: 50%;
  height: 100%;
  width: auto;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.all-products {
  display: grid;
  grid-template-columns: 200px;
  grid-template-rows: 50px 250px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
}

.all-pg-title {
  grid-row: 1/2;
  grid-column: 1/2;
  width: 100%;
  height: 30px;
  font-size: 26px;
}

.all-products-image {
  grid-row: 2/3;
  grid-column: 1/2;
  height: 200px;
}

@keyframes pulse {
  0% {
    transform: scale(0.5);
    opacity: 0;
  }
  50% {
    opacity: 0.05;
  }
  70% {
    opacity: 0.02;
  }
  100% {
    transform: scale(2);
    opacity: 0;
  }
}

@keyframes shine {
  0% {
    transform: rotate(45deg) translateX(-700%) translateY(-30%);
  }
  100% {
    transform: rotate(45deg) translateX(700%) translateY(-30%);
  }
}

